--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Béni Richárd Balázs
 title: Programtervező Informatikus
-email: dobi4554@gmail.com
+email: richardbeniwork@gmail.com
 # website: www.github.com/Devon96/MyResume
 
 # Dark Mode (true/false/never)
